# megachat_tasks

./: .gitignore
drf_api/: README.md  pyproject.toml  requirements.txt
drf_api/chat/: consumers.py  models.py  routing.py  signals.py  urls.py  views.py
drf_api/chat/migrations/: 0001_initial.py
drf_api/chat/templates/chat/: chat_detail.html  inbox.html
drf_api/chat/templates/chat/partials/: input_clear.html  message_bubble.html  message_with_input_clear.html
drf_api/config/: asgi.py  settings.py  urls.py
drf_api/message/: models.py  urls.py  views.py
drf_api/message/migrations/: 0001_initial.py  0002_remove_message_is_seen_message_is_active.py
drf_api/templates/: base.html
telegrambot/: README.md  pyproject.toml
telegrambot/src/: main.py  requirements.txt
